# codesketch

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.md  cabal.project  codesketch.cabal  mod_test.rs  struct_test.rs  test.rs  test_output.txt
app/: Main.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
dist-newstyle/packagedb/ghc-9.12.1/: codesketch-0.1.0.0-inplace.conf  package.cache
rust-codesketch/: Cargo.toml
rust-codesketch/src/: output.rs  parser.rs  types.rs
samples/: struct_test.rs  trait_impl_test.rs  trait_test.rs  tuple_struct_test.rs
src/: main.rs  output.rs  parser.rs  types.rs
src/CodeSketch/: Errors.hs  Json.hs  Parser.hs  Scanner.hs  Types.hs
src/CodeSketch/TreeSitter/: Common.hs  Rust.hs
src/browser/: app.rs  mod.rs  ui.rs
test/: Spec.hs  test_rust.rs
test_outputs/: base_output.txt  output.txt
