[package]
name = "codesketch"
version = "0.1.0"
edition = "2021"
authors = ["tangentstorm <michal.wallace@gmail.com>"]
description = "Tool for quickly getting a rough outline of the code in your files"
license = "MIT"

[dependencies]
tree-sitter = "=0.20.10"
tree-sitter-rust = "0.20.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5.1", features = ["derive"] }
anyhow = "1.0.75"
walkdir = "2.4.0"
termcolor = "1.4.0"
colored = "2.0.4"

# Interactive browser dependencies
ratatui = "0.25.0"
crossterm = "0.27.0"
syntect = "5.1.0"
