cabal-version:      3.14

name:               codesketch
version:            0.1.0.0

synopsis:           Tool for quickly getting a rough outline of the code in your files
description:        Uses tree-sitter to analyze code files and output JSON structure of definitions

license:            MIT
author:             tangentstorm
maintainer:         michal.wallace@gmail.com
build-type:         Simple
extra-doc-files:    README.md

common warnings
    ghc-options: -Wall

library
    import:           warnings

    exposed-modules:  CodeSketch.Types
                     ,CodeSketch.Parser
                     ,CodeSketch.Scanner
                     ,CodeSketch.Json
                     ,CodeSketch.Errors

    other-extensions: OverloadedStrings

    build-depends:    base ^>=4.21.0.0
                     ,aeson >= 2.2.0.0
                     ,bytestring >= 0.11.5.3
                     ,text >= 2.1
                     ,filepath >= 1.4.100.4
                     ,directory >= 1.3.8.0
                     ,process >= 1.6.0.0
                     ,ansi-terminal >= 1.1
                     ,regex-tdfa >= 1.3.2.0

    hs-source-dirs:   src
    default-language: Haskell2010

executable codesketch
    import:           warnings

    main-is:          Main.hs
    other-modules:    Paths_codesketch

    build-depends:    base ^>=4.21.0.0
                     ,codesketch
                     ,aeson >= 2.2.0.0
                     ,bytestring >= 0.11.5.3
                     ,text >= 2.1
                     ,optparse-applicative >= 0.18.1.0
                     ,directory >= 1.3.8.0
                     ,ansi-terminal >= 1.1

    hs-source-dirs:   app
    default-language: Haskell2010

test-suite codesketch-test
    import:           warnings
    type:             exitcode-stdio-1.0
    main-is:          Spec.hs
    build-depends:    base ^>=4.21.0.0
                     ,codesketch
                     ,hspec >= 2.11.4
                     ,aeson >= 2.2.0.0
                     ,directory >= 1.3.8.0
    hs-source-dirs:   test
    default-language: Haskell2010
